cleaning up last update